chore: Add Storybook to project. Storybook allow us to preview components in the web browser, speeding up the whole UI development process.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,7 @@
-/*! tailwindcss v4.1.7 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v4.1.11 | MIT License | https://tailwindcss.com */
+.contents {
+  display: contents;
+}
 .flex {
   display: flex;
 }
