--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,5 +1,8 @@
 @import "tailwindcss";
 
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap");
+
 @theme {
     /* Colors */
     --color-neutral-0: rgb(255, 255, 255);
@@ -72,8 +75,8 @@
     --text-heading-1--line-height: 36px;
 
     /* Font families */
-    --font-body: Manrope;
-    --font-heading: Newsreader;
+    --font-body: Manrope, sans-serif;
+    --font-heading: "Playfair Display", serif;
 
     /* Border radiuses */
     --radius-sm: 4px;
